# Numberismatter

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
accounts/tests/: test_account_views.py  test_auth_views.py  test_forms.py  test_models.py
game/: admin.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_enemy_stage.py  0003_seed_dummy_enemies.py  0004_skill_code.py  0005_seed_critical_skill.py  0006_enemy_image.py  0007_reseed_act1_enemies.py  0008_alter_character_max_hp.py  0009_seed_act2_act3_enemies.py  0010_rebalance_all_acts.py  0011_enemy_weight.py  0012_reseed_enemies_roster.py  0013_character_crit_chance.py  0014_seed_upgrades.py  0015_remove_critical_skill.py  0016_seed_reroll_skill.py
game/tests/: test_battle.py  test_home.py  test_run.py  test_services.py  test_signals.py
numberismatter/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/accounts/: account_delete.html  login.html  password_change.html  password_change_done.html  profile_edit.html  signup.html
templates/game/: _battle_body.html  battle.html  home.html  shop.html
