[project]
name = "numberismatter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-environ>=0.13.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.2",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E = 문법 에러, F = pyflakes, I = import 정렬, W = 경고

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["accounts", "game", "numberismatter"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "manage.py",
    "*/settings.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
